# pictionary-fullstack

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
backend/: main.py
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx  DrawingBoard.tsx  DrawingCanvas.tsx
frontend/src/hooks/: useConfetti.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
