[package]
name = "tauri_pictionary"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.0.0-rc.13", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[profile.release]
opt-level = 'z' 
